# agent-voice-assistant

./: .gitignore  README.md  config.example.yaml  install.sh  pyproject.toml  uninstall.sh
.github/workflows/: ci.yml
models/wakeword/: Belvedere.onnx  Hey_Belvedere.onnx
packaging/udev/: 99-respeaker-xvf3800.rules
patches/sendspin-cpp/: 0001-stable-name-derived-client-id.patch
scripts/: build-sendspin-cpp.sh
src/voiceagent/: __init__.py  __main__.py  app.py  cli.py  config.py  diagnostics.py  logging_setup.py  metrics.py  setup_wizard.py
src/voiceagent/arbitration/: __init__.py  arbitrator.py  transport.py
src/voiceagent/audio/: __init__.py  base.py  factory.py  mock.py  sounddevice_io.py  types.py
src/voiceagent/media/: __init__.py  controller.py  homeassistant.py  sendspin.py
src/voiceagent/orchestrator/: __init__.py  closer.py  core.py
src/voiceagent/realtime/: __init__.py  connection.py  resample.py  session.py
src/voiceagent/respeaker/: __init__.py  base.py  factory.py  led.py  mock.py  xvf_host.py
src/voiceagent/wakeword/: __init__.py  base.py  factory.py  mock.py  openwakeword_detector.py
tests/: test_app.py  test_arbitration.py  test_audio.py  test_cli.py  test_config.py  test_diagnostics.py  test_homeassistant.py  test_logging.py  test_media.py  test_media_controller.py  test_metrics.py  test_orchestrator.py  test_realtime.py  test_respeaker.py  test_setup_wizard.py  test_wakeword.py  test_warm_connection.py
